# riberry

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  index.html  install.py  pyproject.toml  requirements.txt  script.js  style.css
.github/workflows/: core-dump-analysis.yml  release.yml  release_firmware.yml  test.yml
boot/: uEnv.txt
dict/: adjectives.txt  nouns.txt
firmware/: atom_s3_i2c_display.ino
firmware/atom_echo_i2c_audio/: README.md  atom_echo_i2c_audio.ino  platformio.ini
firmware/atom_echo_i2c_audio/src/: main.cpp
firmware/atom_s3_battery_display/: extra_script.py  platformio.ini
firmware/atom_s3_battery_display/lib/atom_s3_lcd/: atom_s3_lcd.cpp  atom_s3_lcd.h
firmware/atom_s3_battery_display/lib/display_battery_mode/: display_battery_mode.cpp  display_battery_mode.h
firmware/atom_s3_battery_display/lib/display_battery_mode1/: battery_display.h  display_battery_mode1.cpp  display_battery_mode1.h
firmware/atom_s3_battery_display/lib/display_battery_mode2/: display_battery_mode2.cpp  display_battery_mode2.h
firmware/atom_s3_battery_display/lib/display_information_mode/: display_information_mode.cpp
firmware/atom_s3_battery_display/lib/display_ip_mode/: display_ip_mode.cpp  display_ip_mode.h
firmware/atom_s3_battery_display/lib/display_qrcode_mode/: display_qrcode_mode.cpp
firmware/atom_s3_battery_display/lib/ip_display_mode/: ip_display_mode.cpp  ip_display_mode.h
firmware/atom_s3_battery_display/lib/mode/: mode.h
firmware/atom_s3_battery_display/lib/servo_control_mode/: servo_control_mode.cpp
firmware/atom_s3_battery_display/lib/teaching_mode/: teaching_mode.cpp  teaching_mode.h
firmware/atom_s3_battery_display/src/: main.cpp
firmware/atom_s3_i2c_display/: README.md  extra_script.py  platformio.ini  upload_script.py
firmware/atom_s3_i2c_display/lib/atom_s3_button/: atom_s3_button.cpp  atom_s3_button.h
firmware/atom_s3_i2c_display/lib/atom_s3_i2c/: atom_s3_i2c.cpp  atom_s3_i2c.h  packet.h
firmware/atom_s3_i2c_display/lib/atom_s3_lcd/: atom_s3_lcd.cpp  atom_s3_lcd.h  primitive_lcd.cpp  primitive_lcd.h
firmware/atom_s3_i2c_display/lib/atom_s3_mode_manager/: atom_s3_mode_manager.cpp  atom_s3_mode_manager.h
firmware/atom_s3_i2c_display/lib/button_manager/: button_manager.cpp  (+3 more)
firmware/atom_s3_i2c_display/partition_table/: partitions.csv  partitions_m5stack_atoms3.csv  partitions_m5stack_basic.csv
firmware/atom_s3_i2c_display/src/: main.cpp
firmware/atomic_robot_tools/: README.md  platformio.ini
firmware/atomic_robot_tools/src/: dynamixel_current.cpp  dynamixel_extended_position.cpp  dynamixel_hold_free.cpp  dynamixel_safe_test.cpp  dynamixel_setBaudandID.cpp  espnow_dynamixel_controller.cpp  wifi_dynamixel_controller.cpp
firmware/esp_now_pairing/: README.md  extra_script.py  platformio.ini
firmware/esp_now_pairing/src/: esp_now_init_deinit.cpp  main.cpp
overlays/: i2c1.dts  i2c3.dts
overlays/raspberry-pi/: usercfg.txt
riberry/: __init__.py  chatbot.py  credentials.py  embedding_cache.py  esp_now_pairing.py  filecheck_utils.py  firmware_update.py  git_utils.py  i2c_base.py  marker_manager.py  mode.py  mode_type.py  motion_manager.py  network.py  select_list.py  teaching_interface.py  teaching_manager.py  wifi_connect_utils.py
riberry/apps/: riberry_analyze_core_dump.py  riberry_update_firmware.py
riberry/battery/: __init__.py  common.py  mp2760.py  pisugar.py
riberry/com/: base.py  i2c_base.py  uart_base.py
riberry/platformio/: core_dump.py  device_to_mcu.py  toolchain.py
riberry/utils/ros/: namespace.py
ros/riberry_startup/: CMakeLists.txt  README.md  package.xml
ros/riberry_startup/config/: tags.yaml
ros/riberry_startup/include/riberry_startup/: filelock.h
ros/riberry_startup/launch/: aerial_robot.launch  all_modes.launch  apriltag_detection.launch  atoms3_button_state_publisher.launch  d405.launch  keyword_extraction.launch  module_llm_chatbot.launch  module_llm_keyword_extraction.launch  module_llm_speech_to_text.launch  mpu6886_imu_publisher.launch  pump.launch  riberry_startup.launch  sound_play.launch  speech_recognition.launch  speech_to_action.launch  speech_to_text.launch  user.launch
ros/riberry_startup/msg/: Context.msg  ImuFace.msg  KeywordCandidates.msg
ros/riberry_startup/node_scripts/: button_action_manager.py  button_state_republisher.py  change_atom_echo_led_color.py  change_systemd_rosmaster.py  chatbot_node.py  data_collection_mode.py  display_battery_graph_mode.py  display_battery_mode.py  display_odom_mode.py  display_speech_to_text.py  espnow_dynamixel_controller_node.py  i2c_audio_publisher.py  imu_filter.py  imu_orientation.py  key_trigger.py  keyword_extraction.py  keyword_to_action.py  leader_follower_mode.py  marker_depth_pose_estimator.py  mux_selector.py  package_list_service.py  pressure_control_mode.py  presure_display.py  pump_switcher.py  servo_control_mode.py  set_mode.py  speak_to_light.py  speech_to_text.py  speech_to_text_google.py  speech_to_text_mode.py  teaching_mode.py  vacuum_control.py  vacuum_pressure.py  webrtcvad_ros.py
ros/riberry_startup/node_scripts/tts/: openjtalk_tts_server.py
ros/riberry_startup/sample/: contexts.json  sample_chatbot.py  sample_keyword_extraction.py
ros/riberry_startup/scripts/: bluetooth_device_connect.py  esp_now_pairing.py  esp_now_pairing_single.py  generate_html.py  get_roshost.py  pairing_bt.py
ros/riberry_startup/src/: i2c_audio_publisher.cpp  i2c_button_state_publisher.cpp  imu_filter.cpp  mpu6886_imu_publisher_node.cpp
ros/riberry_startup/srv/: RegisterContexts.srv  SelectMotion.srv
ros/riberry_startup/systemd/: change_systemd_rosmaster.service  riberry_startup.service  roscore.service  user.service
ros/riberry_startup/systemd/user/: riberry_startup.service  user.service
ros/riberry_startup/www/: .gitignore  index.html.template
systemd/: display_information.service  display_information@.service  wifi-connect.service
systemd/oneshot/: change-hostname-helper.service  resize-helper.service
systemd/radxa-zero/: heartbeat.service  led-off.service
systemd/user/: display_information.service
(+51 files in other folders)
