[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riberry-robot"
version = "0.1.3"
description = "Riberry: Robot Intelligent Binary Enhancement Resource Revolutionary Yield"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Iori Yanokura", email="yanokura@jsk.imi.i.u-tokyo.ac.jp" },
    { name="Naoya Yamaguchi", email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp" },
    { name="Aoi Nakane", email="nakane@jsk.imi.i.u-tokyo.ac.jp" },
]
keywords = ["riberry", "robotics", "automation", "robot module"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "Adafruit-Blinka",
    # "RPi-GPIO"
    "adafruit-circuitpython-mprls",
    "colorama",
    "GitPython",
    "filelock",
    "i2c-for-esp32",
    "platformio",
    "pybsc",
    "pyserialtransfer==2.1.6",
    "smbus2",
]

[project.urls]
"Homepage" = "https://github.com/iory/riberry"
"Repository" = "https://github.com/iory/riberry"

[tool.setuptools]
packages = { find = {} }

[project.scripts]
riberry-analyze-core-dump = "riberry.apps.riberry_analyze_core_dump:main"
riberry-update-firmware = "riberry.apps.riberry_update_firmware:main"

[tool.ruff]
target-version = "py38"
line-length = 90


# See https://github.com/charliermarsh/ruff#rules for error code definitions.

[tool.ruff.lint]
select = [
    # "ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "RUF", # ruff specific rules
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
    "ISC002",
    "NPY201",
    "TID251"
]

ignore = [
  "C901", # Comprehension is too complex (11 > 10)
  "N802", # Function name should be lowercase
  "N806", # Variable in function should be lowercase
  "E501", # Line too long ({width} > {limit} characters)
  "B904", # raise ... from err
  "B905", # zip() without an explicit strict= parameter
  "RUF005", # recommends non-type-aware expansion
  "RUF046", # unnecessary-cast-to-int
]

# don't allow implicit string concatenation
flake8-implicit-str-concat = {"allow-multiline" = false}

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"IPython.embed".msg = "you forgot to remove a debug embed ;)"
"numpy.empty".msg = "uninitialized arrays are haunted try numpy.zeros"

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # spellchecker:disable-line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on"  # spellchecker:<on|off>
]
default.extend-ignore-identifiers-re = [
    # Add individual words here to ignore them
]
