<package format="3">
  <name>riberry_startup</name>
  <version>0.0.1</version>

  <description>Riberry: Robot Intelligent Binary Enhancement Resource Revolutionary Yield package</description>
  <author>Iori Yanokura</author>
  <author email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</author>
  <author email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</author>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>
  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>audio_common_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roswww</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>web_video_server</exec_depend>

</package>
